--- a/assets/css/style.comp.css
+++ b/assets/css/style.comp.css
@@ -1216,10 +1216,7 @@ body {
     .table--alert .table__header-col:nth-child(2),
     .table--alert tr td:nth-child(2) {
       width: 20%;
-      min-width: 18rem;
-      display: flex;
-      align-items: center;
-      height: 100%; }
+      min-width: 18rem; }
       @media only screen and (max-width: 80em) {
         .table--alert .table__header-col:nth-child(2),
         .table--alert tr td:nth-child(2) {
